--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Example ui configuration app.",
+  "name": "Example_ui_configuration_app.",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
